# Pallas

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  compile_commands.json
.cache/clangd/index/: lexer.c.AD24DA0C47BA8138.idx  lexer.h.A3B148A2BFBC0BA4.idx
docs/: DESIGN.md  TODO.md  TODO.txt  errors.md  grammar.md  lexer.md  parser.md
docs/project/: CODE_STYLE.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION.md  PROJECT.md
examples/: pallas.pal
grammar/: Pallas.g4
include/: diagnostic.h  error.h  platform.h
scripts/: format.py  tidy.py
src/: diagnostic.c  error.c  errors.c  main.c  main.cpp
src/filesystem/: fs.cpp  fs.h
src/frontend/: ast.h  diagnostics.h  error_codes.h  parser.cpp  parser.h  scanner.cpp  scanner.h
src/lex/: lexer.c  lexer.h
src/lexer/: lexer.cpp  lexer.h
src/parse/: ast.h  example.pal  grammar.ebnf  grammar.txt  parser.c  parser.h
src/tests/: lexer_test.c  lexer_test.h  parser_test.c  parser_test.h
tests/frontend/scanner/: diagnostics_tests.cpp  keywords_tests.cpp  literals_tests.cpp  operators_tests.cpp  scanner_tests.cpp
